# gmtools

./: README.md  meson.build
glade/: gmtoolsui.glade
src/: main.cpp  meson.build
src/gui/window/: window.cpp  window.h
